*** empty log message ***

--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-23  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* MORE.STUFF: Delete obsolete URL.
+
 2004-06-10  Lars Hansen  <larsh@math.ku.dk>
 
 	* NEWS: Describe dired-omit-mode. Describe desktop package changes.
