--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-23  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* lists.texi, files.texi, processes.texi, macros.texi, hash.texi:
+	* frames.texi, buffers.texi, backups.texi, variables.texi:
+	* loading.texi, eval.texi, functions.texi, control.texi:
+	* symbols.texi, minibuf.texi: Reposition @anchor's.
+
+	* help.texi: Various small changes in addition to the following.
+	(Describing Characters): Describe PREFIX argument to
+	`key-description'.  Correct and clarify definition of
+	`text-char-description'.  Describe NEED-VECTOR argument to
+	`read-kbd-macro'.
+	(Help Functions): Clarify definition of `apropos'.
+
 2004-06-23  Lars Hansen  <larsh@math.ku.dk>
 
 	* files.texi (Saving Buffers): Correct description of
