--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-23  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* keymap.c (Ftext_char_description): Doc fix.
+	* doc.c (Fsnarf_documentation): Doc fix.
+
 2004-06-22  Kim F. Storm  <storm@cua.dk>
 
 	* fns.c (Fmapcar, Fmapconcat): GCPRO the args array.
