--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-24  David Kastrup  <dak@gnu.org>
+
+	* NEWS: Move description from new paragraph-start and
+	indent-line-function defaults to general news instead of new
+	packages.  Same for query-replace-skip-read-only.  Add
+	description of new `\,' and `\?' replacement string features.
+
 2004-06-23  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* MORE.STUFF: Delete obsolete URL.
