--- a/etc/NEWS
+++ b/etc/NEWS
@@ -914,6 +914,23 @@ buffers to search by their filename.  Internally, Occur mode has been
 rewritten, and now uses font-lock, among other changes.
 
 +++
+** The default values of paragraph-start and indent-line-function have
+been changed to reflect those used in Text mode rather than those used
+in Indented-Text mode.
+
+** New user option `query-replace-skip-read-only': when non-nil,
+`query-replace' and related functions simply ignore
+a match if part of it has a read-only property.
+
+** When used interactively, the commands `query-replace-regexp' and
+`replace-regexp' allow \,expr to be used in a replacement string,
+where expr is an arbitrary Lisp expression evaluated at replacement
+time.  In many cases, this will be more convenient than using
+`query-replace-regexp-eval'.  All regular expression replacement
+commands now allow `\?' in the replacement string to specify a
+position where the replacement string can be edited for each
+replacement.
+
 ** Emacs normally highlights mouse sensitive text whenever the mouse
 is over the text.  By setting the new variable `mouse-highlight', you
 can optionally enable mouse highlighting only after you move the
@@ -2134,14 +2151,6 @@ mode-lines in inverse-video.
 
 ** New package benchmark.el contains simple support for convenient
 timing measurements of code (including the garbage collection component).
-
-** The default values of paragraph-start and indent-line-function have
-been changed to reflect those used in Text mode rather than those used
-in Indented-Text mode.
-
-** If you set `query-replace-skip-read-only' non-nil,
-`query-replace' and related functions simply ignore
-a match if part of it has a read-only property.
 
 ** The new Lisp library fringe.el controls the apperance of fringes.
 
