(Unconditional Replace): Use replace-string instead of query-replace in example. (Regexp Replace): Add explanations for `\,', `\#' and `\?' sequences. (Query Replace): Correct explanation of `^' which does not use the mark stack.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-24  David Kastrup  <dak@gnu.org>
+
+	* search.texi (Unconditional Replace): Use replace-string instead
+	of query-replace in example.
+	(Regexp Replace): Add explanations for `\,', `\#' and `\?'
+	sequences.
+	(Query Replace): Correct explanation of `^' which does not use
+	the mark stack.
+
 2004-06-21  Nick Roberts  <nickrob@gnu.org>
 
 	* misc.texi (Shell History Copying): Document comint-insert-input.
