--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-25  David Kastrup  <dak@gnu.org>
+
+	* search.texi (Regexp Replace): Some typo corrections and
+	rearrangement.
+
 2004-06-24  David Kastrup  <dak@gnu.org>
 
 	* search.texi (Unconditional Replace): Use replace-string instead
